[package]
name = "debugger"
version = "0.0.1"
authors = [ "sam.noedel@gmail.com" ]
edition = "2018"
description = "Debugger for libnes development"
publish = false

[dependencies]
chrono = "^0.4.19"
clap = "^2.33.3"
eframe = "0.23.0"
egui = "0.23.0"
env_logger = "^0.9.0"
getset = "^0.1.1"
gl = "^0.14.0"
log = "^0.4.14"
nes = { path = "../nes" }
png = "^0.16.8"
