[package]
name = "debugger"
version = "0.0.1"
authors = ["sam.noedel@gmail.com"]
edition = "2018"
description = "Debugger for libnes development"
publish = false

[dependencies]
chrono = "^0.4.19"
clap = "^2.33.3"
cpal = "^0.15.3"
disasm = { path = "../disasm" }
eframe = "^0.31.1"
egui = { version = "^0.31.1", features = ["persistence"] }
env_logger = "^0.9.0"
log = "^0.4.14"
nes = { path = "../nes" }
png = "^0.16.8"
