[package]
name = "nes"
version = "0.0.1"
authors = [ "sam.noedel@gmail.com" ]
edition = "2018"
description = "An NES emulation library"
publish = false

[dependencies]
dasp = { version = "^0.11.0", features = [ "interpolate", "interpolate-linear", "signal" ] }
getset = "^0.1.1"
log = "^0.4.14"
pcm = { path = "../pcm" }

[dev-dependencies]
matches = "^0.1.8"
