[package]
name = "nes"
version = "0.0.1"
authors = ["sam.noedel@gmail.com"]
edition = "2018"
description = "An NES emulation library"
publish = false

[dependencies]
bitflags = "2.4.1"
cpal = "^0.15.3"
dasp = { version = "^0.11.0", features = [
  "interpolate",
  "interpolate-linear",
  "signal",
] }
disasm = { path = "../disasm" }
log = "^0.4.14"

[dev-dependencies]
matches = "^0.1.8"
